feat(header): adiciona appbar da pagina e imagens da logo e thumbnail

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@santospatrick/eslint-config-react": "^1.0.6",
+    "@santospatrick/prettier-config": "^1.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -19,11 +22,13 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "@santospatrick/eslint-config-react",
+    "rules": {
+      "react/display-name": "off",
+      "react/react-in-jsx-scope": "off"
+    }
   },
+  "prettier": "@santospatrick/prettier-config",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -35,5 +40,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.2"
   }
 }
